finsh allmost the user endpoints (not admin ) by fetching the data from backend